--- a/static/css/joanna.css
+++ b/static/css/joanna.css
@@ -67,7 +67,7 @@ body {padding: 0px; margin: 0px; background-image: url('imgs/back.png');}
 
 
 #footer {
-   position:relative;
+   position:absolute;
    bottom:0;
    width:100%;
    height:44px;  
