--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,10 @@
 {% end %}
 	{% raw xsrf_form_html() %}
 <div id="footer"> about us   <span style="padding-left:50px"> contact us </span> </div> 
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-twipsy.js"></script>
+<script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-popover.js"></script>
 {% block scripts %}
 	{% for js in kwargs['js_deps'] %}
 		<script src="{{static_url(js)}}"></script>
