--- a/templates/create-circles.html
+++ b/templates/create-circles.html
@@ -6,25 +6,34 @@
 	<div class="hero-unit">
 	  <h1>Yay! Welcome to fash.am.</h1>
 	  <br>
-	  <p>Now that you are registered you can invite your friends to be your own personal stylists.</p>
-
+	  <p>Drag and drop </a> your friends to your circles and let them be your own personal stylists.</p>
 	  <div class="friends-list-container">
-	  {% for friend in kwargs['friends'] %}
+		{% for friend in kwargs['friends'] %}
 		<div class="friend-info-container">
 			<div class="friend-img">
 				<img style="width: 80px; height:60px;" src="{{friend.profile_pic}}">
 			</div>
 			<div class="friend-name-container">
-			{{friend.first_name}}<br>
-			{{friend.last_name}}
+				<p>{{friend.first_name}}</p>
+				<p>{{friend.last_name}}</p>
 			</div>		
-		</div>
-	  {% end %}
+	     </div>
+		 {% end %}
 	  </div> 
-	  <p>
-	    <a title="Invite your friends to be your stylists!" onclick="sendRequestViaMultiFriendSelector(); return false;" class="btn btn-primary btn-large">Invite friends</a>
-   	    <a title="Nah! I'll invite them later." href="/" class="btn btn btn-large">Skip</a>
-	  </p>
+	
+		<div class="separator">
+		<hr color="black" width="100%" size="5" align="center">
+		</div>
+	
+		<div class="user-circles-container">
+		<div id="create-circle" class="create-circle-container">
+		</div>
+		{% for circle in kwargs['circles']%}
+			<div class="circle-container">
+				<p>{{circle}}</p>
+			</div>
+		{% end %}
+		</div>
 	</div>
 </div>
 {% end %}
