--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
 <div id="footer"> about us   <span style="padding-left:50px"> contact us </span> </div> 
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 <script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-twipsy.js"></script>
 <script src="http://twitter.github.com/bootstrap/1.4.0/bootstrap-popover.js"></script>
 {% block scripts %}
